--- a/gr-foo/include/foo/CMakeLists.txt
+++ b/gr-foo/include/foo/CMakeLists.txt
@@ -23,5 +23,5 @@
 ########################################################################
 install(FILES
     api.h
-    DESTINATION include/foo
+    amp.h DESTINATION include/foo
 )
